Modernize glogging: fix the publishing path, update dependencies, add tests (#6)
* Bump dependencies to latest Java 8-compatible releases

- logback 1.3.5 -> 1.3.16 (fixes CVE-2023-6378 and CVE-2024-12798;
  stays on the 1.3.x line so the Java 8 baseline is preserved)
- jackson-databind 2.14.2 -> 2.22.1
- gson 2.10.1 -> 2.14.0

All three still target Java 8 bytecode, so consumers on Java 8 are
unaffected.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014pEmupktpo5duJUsf7KE1w

* Migrate release process from retired OSSRH to the Central Portal

Sonatype OSSRH and the Nexus staging flow it depended on were shut down
on 2025-06-30, so the existing nexus-staging-maven-plugin +
s01.oss.sonatype.org configuration can no longer publish the library.

- Replace nexus-staging-maven-plugin with central-publishing-maven-plugin
  targeting the Sonatype Central Portal.
- Move the source/javadoc/gpg/publishing plugins into a 'release' profile
  so ordinary CI 'mvn package/verify' runs stay fast and need no GPG key;
  publish with 'mvn -Prelease clean deploy'.
- Bump the long-stale release plugins so they run on modern JDKs
  (maven-source 2.2.1 -> 3.3.1, maven-javadoc 2.9.1 -> 3.11.2,
  maven-gpg 1.5 -> 3.2.7).
- Drop the obsolete distributionManagement blocks and update the README
  release instructions.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014pEmupktpo5duJUsf7KE1w

* Modernize GitHub Actions CI workflow

- actions/checkout@v2 -> @v4 and actions/setup-java@v2 -> @v4
  (the v2 actions run on the EOL Node 16 runtime).
- distribution 'adopt' -> 'temurin' (AdoptOpenJDK moved to Eclipse
  Temurin; 'adopt' is deprecated).
- Build across a JDK matrix (8, 11, 17, 21) instead of JDK 8 only, to
  catch JDK-specific regressions while 8 stays the compile target.
- Run 'mvn verify' so the new test suite executes in CI, and enable
  Maven dependency caching.

Co-Authored-